gccida/c1/copy_rtx_and_substitute
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2349:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode pool_mode_for_function; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2355:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v20; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2362:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v27; // ebp 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2364:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code v29; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2365:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v30; // esi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2368:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v33; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2369:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v34; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2381:4: error: expected ';' after expression
rtx v46; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2381:5: error: use of undeclared identifier 'v46'
rtx v46; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2389:4: error: expected ';' after expression
rtx v54; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2389:5: error: use of undeclared identifier 'v54'
rtx v54; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2393:4: error: expected ';' after expression
rtx v58; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2393:5: error: use of undeclared identifier 'v58'
rtx v58; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2397:4: error: expected ';' after expression
rtx v62; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2397:5: error: use of undeclared identifier 'v62'
rtx v62; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2399:4: error: expected ';' after expression
rtx v64; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2399:5: error: use of undeclared identifier 'v64'
rtx v64; // rcx 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2400:4: error: expected ';' after expression
rtx v65; // rcx 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/integrate.c:2400:5: error: use of undeclared identifier 'v65'
rtx v65; // rcx 
    ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/copy_rtx_and_substitute/src/obj/integrate.o] Error 1
